--- a/src/styles/_layouts.scss
+++ b/src/styles/_layouts.scss
@@ -1,7 +1,6 @@
 body {
     max-width: 100vw;
     width: 100vw;
-    min-height: 100vh;
     overflow-x: hidden;
     position: relative;
     margin: 0;
